Fixed header spacing & / Overview text

--- a/css/style.css
+++ b/css/style.css
@@ -912,7 +912,7 @@ span#infoicon a:hover span {display: block;
 #sidebar-right .item-list li {list-style-type: none;}
 
 .block p {color: #333;}
-.overview-text p { width: 720px;}
+.overview-text p { width: 720px; margin-top: 0px;}
 
 /* Stats */
 #stats {}
